# PSM-App5-Boids

./: CMakeLists.txt  boid.cpp  main.cpp  predator.cpp
src/: main.cpp
src/boids/: boid.cpp  boid.h
src/boids/predator/: predator.cpp  predator.h
